objects/vlocity_cmt__OpportunityAppliedPromotion__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AccountDiscountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Discount</label>
        <referenceTo>vlocity_cmt__AccountDiscount__c</referenceTo>
        <relationshipLabel>Opportunity Applied Promotions</relationshipLabel>
        <relationshipName>OpportunityAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <description>The action requested in this opportunity for this applied promotion with values such as Add, Change, Disconnect, Existing. Existing means no change requested.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AppliesTo__c</fullName>
        <description>Identifies to what the promotional pricing will be applied: to a specific asset, to multiple assets, to a contract or to an account.</description>
        <label>Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Multiple Assets</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the account to which the promotional pricing is applied. Used when the promotion is applied to all charges made to this account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Applied Promotions</relationshipLabel>
        <relationshipName>OpportunityAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CommitmentEndDate__c</fullName>
        <description>The commitment end date for the services provided under this promotion if this opportunity becomes a submitted order. Penalties may be incurred for exiting out of the promotional conditions during the commitment period.</description>
        <label>Commitment End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CommitmentStartDate__c</fullName>
        <description>The commitment start date for the services provided under this promotion if this opportunity becomes a submitted order. Penalties may be incurred for exiting out of the promotional conditions during the commitment period.</description>
        <label>Commitment Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractDiscountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Discount</label>
        <referenceTo>vlocity_cmt__ContractVersionDiscount__c</referenceTo>
        <relationshipLabel>Opportunity Applied Promotions</relationshipLabel>
        <relationshipName>OpportunityAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunity Applied Promotions</relationshipLabel>
        <relationshipName>OpportunityAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityDiscountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Discount</label>
        <referenceTo>vlocity_cmt__OpportunityDiscount__c</referenceTo>
        <relationshipLabel>Opportunity Applied Promotions</relationshipLabel>
        <relationshipName>OpportunityAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityId__c</fullName>
        <description>(Required) Identifies the parent opportunity for this opportunity applied promotion.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Applied Promotions</relationshipLabel>
        <relationshipName>OpportunityAppliedPromotions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityLineItemId__c</fullName>
        <description>Identifies the line item (therefore asset) to which the promotional pricing will be applied. Used when a promotion will be applied to a specific asset.</description>
        <externalId>true</externalId>
        <label>Opportunity Line Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingEndDate__c</fullName>
        <description>The end date of the promotional pricing if this opportunity becomes a submitted order.</description>
        <label>Benefit End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingStartDate__c</fullName>
        <description>The start date of the promotional pricing if this opportunity becomes a submitted order.</description>
        <label>Benefit Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the promotion applied.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipLabel>Opportunity Applied Promotions</relationshipLabel>
        <relationshipName>OpportunityAppliedPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReasonForCancellation__c</fullName>
        <description>Text describing the reason why the customer wants to cancel their participation in the promotion.</description>
        <label>Reason for Cancellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestDate__c</fullName>
        <description>Date requested for the application or cancellation of the customer&apos;s participation in this promotion.</description>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <description>Sequence in which this promotion is applied to the customer&apos;s asset or assets. Used to properly calculate discounted pricing.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubAction__c</fullName>
        <description>The sub-action requested in this opportunity for this applied promotion with values such as Move or Cancel.</description>
        <label>Sub Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Applied Promotion</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Applied Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>